@@ -5,4 +5,16 @@ plugins {
 sourceCompatibility = '12'
 targetCompatibility = '12'
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.12'
+}
+
 description = 'core'
