@@ -9,6 +9,14 @@ plugins {
 sourceCompatibility = '12'
 targetCompatibility = '12'
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
+
 dependencyManagement {
     imports {
         mavenBom SpringBootPlugin.BOM_COORDINATES
